--- a/Homework 1.Rmd
+++ b/Homework 1.Rmd
@@ -1,6 +1,9 @@
 ---
 title: "621 - Homework 1"
-output: pdf_document
+output:
+  pdf_document: default
+  html_document:
+    df_print: paged
 date: "2024-02-16"
 ---
 
@@ -23,7 +26,7 @@ library(corrplot)
 set.seed(621)
 ```
 
-```{r}
+```{r, echo = FALSE}
 money_train <- read.csv(url("https://raw.githubusercontent.com/Mattr5541/DATA-621-Homework-1/main/moneyball-training-data.csv"))
 
 
@@ -33,15 +36,15 @@ summary(money_train)
 ## Part 1: Data Exploration
 The money training dataset contains 2,276 variables and 17 elements, including the INDEX or identifying variable, TARGET_WINS, the response variable, and 15 explanatory variables. The variable types are numeric values represented as integers. Six variables have missing values and will be imputed in part two. The variable with the most missing variables is TEAM_BATTING_HBP (batters hit by pitch). 
 
-```{r}
+```{r, echo = FALSE}
 dim(money_train)
 ```
-```{r}
+```{r, echo = FALSE}
 colSums(is.na(money_train))
 ```
 The summary data also states the mean and median for reference, many variables have  similar values, and when the mean and median are very different it suggests the dataset is skewed. The Box plots below visualize these values and show the spread of the data. The boxplots also show many outliers in most of the variables. Additionally, histogram charts can be used to view the skewness of the variables. Both these visuals confirm that the response variable seems to have a normal distribution. While, many variables seem to have a right skew, and some have a bimodal distribution. 
 
-```{r}
+```{r, echo = FALSE}
 #box plot not including the index column
 money_train %>%
   gather(variable, value, TARGET_WINS:TEAM_FIELDING_DP) %>%
@@ -50,7 +53,8 @@ money_train %>%
   facet_wrap(~variable, scales ="free", ncol = 4) +
   labs(x = element_blank(), y = element_blank())
 ```
-```{r}
+
+```{r, echo = FALSE}
 money_train %>%
   keep(is.numeric) %>%                     
   gather(key, value, TARGET_WINS:TEAM_FIELDING_DP) %>%                             
@@ -60,7 +64,7 @@ money_train %>%
 ```
 The target variable is the response variable 'TARGET_WINS'. The scatter plots below show the visual of all other variables, the spread of their data and the correlation line to observe the relationship to the target variable. The sorted_correlation lists the correlation metrics from highest to lowest, indicating these variables are the most positively correlated with results of .46 or above TEAM_PITCHING_H, TEAM_BATTING_H, TEAM_BATTING_BB, and TEAM_PITCHING_BB. To assess if variables are correlated to other variables in the dataset a correlation matrix, with the coefficients added, is also shown below. This will come in handy when trying to avoid collinearity.  
 
-```{r}
+```{r, echo = FALSE}
 money_train <- money_train[, -1]
 money_train %>% 
   gather(variable, value, -TARGET_WINS) %>%
@@ -70,7 +74,7 @@ money_train %>%
   facet_wrap(~variable, scales ="free", ncol = 4) +
   labs(x = element_blank(), y = "Wins") 
 ```
-```{r}
+```{r, echo = FALSE}
 # sorted correlation of explanatory variables correlated to TARGET_WINS, response variables. 
 correlation_matrix <- cor(drop_na(money_train))
 correlation_coefficients <- correlation_matrix[, 1]
@@ -78,7 +82,7 @@ sorted_correlation <- sort(correlation_coefficients, decreasing = TRUE)
 print(sorted_correlation)
 
 ```
-```{r}
+```{r, echo = FALSE}
 correlation_matrix <- cor(drop_na(money_train))
 corrplot(correlation_matrix, method = "color", 
          addgrid.col = NA, tl.col = "black", tl.srt = 45,
@@ -90,7 +94,9 @@ corrplot(correlation_matrix, method = "color",
 
 ## Part 2: Median Imputations for missing variables
 
-```{r}
+To compensate for missingness, we will perform a simple median imputation. We will use the median instead of the mean as some variables in this dataset are heavily skewed.
+
+```{r, echo = FALSE}
 ## Vars with missing observations include: TEAM_BATTING_SO; TEAM_BASERUN_SB; TEAM_BASERUN_CS; TEAM_BATTING_HBP; TEAM_PITCHING_SO; TEAM_FIELDING_DP
 ###Team_BATTING_HBP contains over 2000 missing variables; everything else is within the range of 102-772
 
@@ -107,6 +113,9 @@ TEAM_FIELDING_DP_index <- is.na(money_train$TEAM_FIELDING_DP)
 
 money_train_mod <- money_train %>% missMethods::impute_median()
 summary(money_train_mod)
+
+money_train <- money_train %>% mutate(INDEX = seq_len(nrow(money_train)))
+money_train_mod <- money_train_mod %>% mutate(INDEX = seq_len(nrow(money_train_mod)))
 
 ### Now I will compare some variables to see if the median imputation worked
 money_train_comp <- money_train$TEAM_BATTING_SO
@@ -127,17 +136,18 @@ ggplot(money_train_comp, aes(TEAM_BATTING_SO.y, color = TEAM_BATTING_SO_index)) 
 ggplot(money_train_comp, aes(TEAM_BASERUN_SB.y, color = TEAM_BASERUN_SB_index)) + geom_histogram()
 ggplot(money_train_comp, aes(TEAM_BASERUN_CS.y, color = TEAM_BASERUN_CS_index)) + geom_histogram()
 ggplot(money_train_comp, aes(TEAM_BATTING_HBP.y, color = TEAM_BATTING_HBP_index)) + geom_histogram() ##As we can see, this mean imputation method may not have 
-##been entirely appropriate for this variable, since such a large proportion was missing (~88%). Everything else should be fine. I suggest we discard this var
-##From our models, unless we decide to make a model using only the ~700 present observations, which could be interesting
+##been entirely appropriate for this variable, since such a large proportion was missing (~88%). Everything else should be fine.
 ggplot(money_train_comp, aes(TEAM_PITCHING_SO.y, color = TEAM_PITCHING_SO_index)) + geom_histogram()
 ggplot(money_train_comp, aes(TEAM_FIELDING_DP.y, color = TEAM_FIELDING_DP_index)) + geom_histogram()
 
 
 ```
 
+The imputation was a success for the most part, as most variables were not heavily affected in terms of their distributions. However, the TEAM_BATTING_HBP variable was heavily modified following the imputation, as \~88% of its observations were missing. As a result, we will not use this variable in our upcoming predictive tests
+
 ### Investigate whether the assumptions for linear regression have been met for each variable
 
-```{r}
+```{r, echo = FALSE}
 ##TARGET_WINS
 q1 <- ggplot(money_train_mod, aes(sample = TARGET_WINS)) + stat_qq() + stat_qq_line() + labs(title = "TARGET_WINS")
 
@@ -163,7 +173,7 @@ ggarrange(q1, q2, q3, q4, q5, q6, q7)
 
 ```
 
-```{r}
+```{r, echo = FALSE}
 par(mfrow=c(3,3))
 hist(money_train_mod$TARGET_WINS, main = "TARGET_WINS") #Appears mostly normal with some potential skew
 hist(money_train_mod$TEAM_BATTING_H, main ="TEAM_BATTING_H") #Positive skew is apparant
@@ -182,10 +192,11 @@ hist(money_train_mod$TEAM_PITCHING_SO, main ="TEAM_PITCHING_SO") #Heavy positive
 hist(money_train_mod$TEAM_FIELDING_E, main ="TEAM_FIELDING_E") #Heavy positive skew apparant
 hist(money_train_mod$TEAM_FIELDING_DP, main ="TEAM_FIELDING_DP") #Some negative skew apparant
 ```
+Following our imputation, we can see that some variables are either lightly or heavily skewed. In order to correct for this, we will perform log transformations in an attempt to normalize the variables.
 
-### Correlation plots to test for collinearity among variables
+### Correlation plots following imputation to test for collinearity among variables
 
-```{r}
+```{r, echo = FALSE}
 cor <- cor(money_train_mod)
 
 cor <- as.data.frame(cor)
@@ -197,13 +208,11 @@ print(cor)
 
 Most of the variables are not highly correlated, but there are some potential predictors that are \~ 50-60% correlated. Most concerningly would be the \~90% correlation between TEAM_PITCHING_HR and TEAM_BATTING_HR. Because of the very high correlation between these variables, it may be best to avoid using them in the same model. Otherwise, it may be necessary to transform the variables via mean centering or PCA.
 
-### Transformations & Outlier Removal (WE MAY NOT NEED THIS IF WE CHOOSE TO GO THE BOX-COX ROUTE; IF WE GO THE OUTLIER REMOVAL ROUTE, WE SHOULD BE SELECTIVE
-
-### ABOUT WHICH OUTLIERS WE REMOVE)
+### Log Transformations
 
 Because some variables are heavily affected by negative skew, we can systematically remove outliers that are present
 
-```{r}
+```{r, echo = FALSE}
 # Apply log transformations; and safely by add 1 to avoid log(0) in variables with 0's
 money_train_mod <- money_train_mod %>% mutate(log_TEAM_FIELDING_E = log(TEAM_FIELDING_E))
 money_train_mod <- money_train_mod %>% mutate(log_TEAM_PITCHING_H = log(TEAM_PITCHING_H))
@@ -224,54 +233,6 @@ money_train_mod$log_TEAM_PITCHING_SO <- log(money_train_mod$TEAM_PITCHING_SO + 1
 money_train_mod$log_TEAM_FIELDING_E <- log(money_train_mod$TEAM_FIELDING_E + 1)
 money_train_mod$log_TEAM_PITCHING_BB <- log(money_train_mod$TEAM_PITCHING_BB + 1)
 
-par(mfrow=c(3,3))
-hist(money_train_mod$log_TEAM_FIELDING_E)
-hist(money_train_mod$log_TEAM_PITCHING_H)
-hist(money_train_mod$log_TEAM_PITCHING_BB)
-hist(money_train_mod$log_TEAM_PITCHING_SO)
-hist(money_train_mod$log_TEAM_BASERUN_SB)
-hist(money_train_mod$log_TEAM_BATTING_3B)
-hist(money_train_mod$log_TEAM_BATTING_HR)
-hist(money_train_mod$log_TEAM_BATTING_SO)
-hist(money_train_mod$log_TEAM_BASERUN_CS)
-hist(money_train_mod$log_TEAM_FIELDING_DP)
-
-
-
-##############If we go this route, modify the outlier removal in accordance with the models you intend to build, otherwise, everything could end up being deleted
-##############Box-Cox transformations may be more appropriate for some of the less skewed variables
-outliers_Fielding <- boxplot(money_train_mod$log_TEAM_FIELDING_E, plot = F)$out
-outliers_pitching_H <- boxplot(money_train_mod$log_TEAM_PITCHING_H, plot = F)$out
-outliers_pitching_BB <- boxplot(money_train_mod$log_TEAM_PITCHING_BB, plot = F)$out
-outliers_pitching_SO <- boxplot(money_train_mod$log_TEAM_PITCHING_SO, plot = F)$out
-outliers_baserun_cs <- boxplot(money_train_mod$TEAM_BASERUN_CS, plot = F)$out
-outliers_baserun_sb <- boxplot(money_train_mod$TEAM_BASERUN_SB, plot = F)$out
-outliers_batting_so <- boxplot(money_train_mod$TEAM_BATTING_SO, plot = F)$out
-outliers_batting_bb <- boxplot(money_train_mod$TEAM_BATTING_BB, plot = F)$out
-outliers_batting_3b <- boxplot(money_train_mod$TEAM_BATTING_3B, plot = F)$out
-
-
-
-money_train_mod_2 <- money_train_mod
-money_train_mod_2 <- money_train_mod_2[-which(money_train_mod_2$log_TEAM_FIELDING_E %in% outliers_Fielding),]
-money_train_mod_2 <- money_train_mod_2[-which(money_train_mod_2$log_TEAM_PITCHING_H %in% outliers_pitching_H),]
-money_train_mod_2 <- money_train_mod_2[-which(money_train_mod_2$log_TEAM_PITCHING_BB %in% outliers_pitching_BB),]
-money_train_mod_2 <- money_train_mod_2[-which(money_train_mod_2$log_TEAM_PITCHING_SO %in% outliers_pitching_SO),]
-money_train_mod_2 <- money_train_mod_2[-which(money_train_mod_2$TEAM_BASERUN_CS %in% outliers_baserun_cs),]
-money_train_mod_2 <- money_train_mod_2[-which(money_train_mod_2$TEAM_BASERUN_SB %in% outliers_baserun_sb),]
-#money_train_mod_2 <- money_train_mod_2[-which(money_train_mod_2$TEAM_BATTING_SO %in% outliers_batting_so),] #This causes problems for some reason
-money_train_mod_2 <- money_train_mod_2[-which(money_train_mod_2$TEAM_BATTING_BB %in% outliers_batting_bb),]
-money_train_mod_2 <- money_train_mod_2[-which(money_train_mod_2$TEAM_BATTING_3B %in% outliers_batting_3b),]
-
-par(mfrow=c(3,3))
-hist(money_train_mod_2$log_TEAM_FIELDING_E, main = "log_TEAM_FIELDING_E")
-hist(money_train_mod_2$log_TEAM_PITCHING_H, main = "log_TEAM_PITCHING_H")
-hist(money_train_mod_2$log_TEAM_PITCHING_BB, main = "log_TEAM_PITCHING_BB")
-hist(money_train_mod_2$log_TEAM_PITCHING_SO, main = "log_TEAM_PITCHING_SO")
-hist(money_train_mod_2$TEAM_BASERUN_CS, main = "TEAM_BASERUN_CS")
-hist(money_train_mod_2$TEAM_BATTING_SO, main = "TEAM_BATTING_SO")
-hist(money_train_mod_2$TEAM_BATTING_BB, main = "TEAM_BATTING_BB")
-hist(money_train_mod_2$TEAM_BATTING_3B, main = "TEAM_BATTING_3B")
 
 par(mfrow=c(3,3))
 hist(money_train_mod$log_TEAM_FIELDING_E, main = "log_TEAM_FIELDING_E")
@@ -282,10 +243,6 @@ hist(money_train_mod$TEAM_BASERUN_CS, main = "TEAM_BASERUN_CS")
 hist(money_train_mod$TEAM_BATTING_SO, main = "TEAM_BATTING_SO")
 hist(money_train_mod$TEAM_BATTING_BB, main = "TEAM_BATTING_BB")
 hist(money_train_mod$TEAM_BATTING_3B, main = "TEAM_BATTING_3B")
-
-test <- money_train_mod_2 %>% mutate(log_TEAM_BATTING_3B = log(TEAM_BATTING_3B))
-
-hist(test$log_TEAM_BATTING_3B)
 
 ```
 
@@ -305,7 +262,7 @@ log_TEAM_PITCHING_SO –\> A team that pitches strikeouts might influence winnin
 
 log_TEAM_FIELDING_E –\> A pitching team that commits errors more likely to lose,using log because it is more normally distributed.
 
-```{r}
+```{r, echo = FALSE}
 ###Use a variation of this code if you intend to use a Box-Cox transformation
 #boxcox(outcome ~ predictors, data = money_train_mod_2)
 
@@ -336,7 +293,7 @@ A team can have the best batters/ designated hitters... but what good is that if
 
 In this model, I perform a multiple regression using interaction terms. I am using the same predictors that I used above. Interaction terms in regression models allow us to explore how the effect of one variable on the outcome changes depending on the level of another variable. In the context of baseball, adding interaction terms between offensive and defensive statistics can help quantify the idea that the impact of having strong hitters (offense) on winning games might vary depending on the strength of the team's pitching (defense), and vice versa.
 
-```{r}
+```{r, echo = FALSE}
 model2 = lm(TARGET_WINS ~ TEAM_BATTING_H * TEAM_BATTING_BB + log_TEAM_PITCHING_SO* log_TEAM_FIELDING_E , data= money_train_mod)
 
 summary(model2)
@@ -372,7 +329,7 @@ TEAM_BATTING_H and TEAM_BASERUN_SB: explores how the effect of hits on winning i
 
 TEAM_PITCHING_SO and TEAM_FIELDING_DP: examines how the effect of strikeouts on wins is influenced by the team's ability to execute double plays
 
-```{r}
+```{r, echo = FALSE}
 model3 = lm(TARGET_WINS ~ TEAM_BATTING_H + TEAM_BATTING_BB + TEAM_BASERUN_SB + log_TEAM_FIELDING_DP + log_TEAM_PITCHING_SO + log_TEAM_FIELDING_E + TEAM_BATTING_H:log_TEAM_BASERUN_SB + log_TEAM_PITCHING_SO:log_TEAM_FIELDING_DP, data = money_train_mod)
 
 
@@ -418,7 +375,7 @@ simple AIC (Akaike Information Criterion) comparison. For context, when comparin
 models' AIC values, the model with the lowest AIC value is generally the best 
 model in terms of "goodness of fit."
 
-```{r}
+```{r, echo = FALSE}
 AIC_values <- AIC(model1, model2, model3)
 
 print(AIC_values)
@@ -434,7 +391,7 @@ I also want to go ahead and compare the three models using a BIC comparison (Bay
 Information Criterion). Similarly to AIC, we are looking for the lowest score,
 though we do want to consider the trade-offs presented by model complexity.
 
-```{r}
+```{r, echo = FALSE}
 BIC_values <- BIC(model1, model2, model3)
 
 print(BIC_values)
@@ -453,18 +410,18 @@ the ultimate decision.
 Now, I want to look at the $R^2$ values for the respective models, so that I can 
 assess how the models deal with variance present in the data.
 
-```{r}
+```{r, echo = FALSE}
 summary(model1)$r.squared
 summary(model2)$r.squared
 summary(model3)$r.squared
 ```
 
 When comparing $R^2$ values for the respective models, it is clear that Model 3
-yields the best $R^2$ value.
+yields the best $R^2$ value. However, it is notable that all $R^2$ are rather low, indicating that our models may not be explaining much of the variance in our outcome variable (TARGET_WINS). 
 
 Now, I want to check the RMSE for each model:
 
-```{r}
+```{r, echo = FALSE}
 predictions_train_1 = predict(model1, newdata = money_train_mod)
 predictions_train_2 = predict(model2, newdata = money_train_mod)
 predictions_train_3 = predict(model3, newdata = money_train_mod)
@@ -487,7 +444,7 @@ values, it seems that Model 3 is the best fit.
 Now, before I check the model's respective performance on the evaluation data, I 
 have to prepare my model evaluation data set.
 
-```{r}
+```{r, echo = FALSE}
 evaluation = read_csv('moneyball-evaluation-data.csv')
 
 money_train_join = money_train %>%
@@ -526,7 +483,7 @@ Now, with my test data set prepared, I can run predictions:
 
 #### Model 1 Predictions:
 
-```{r}
+```{r, echo = FALSE}
 predictions_1 = predict(model1, newdata = df)
 
 print(predictions_1)
@@ -534,7 +491,7 @@ print(predictions_1)
 
 #### Model 2 Predictions:
 
-```{r}
+```{r, echo = FALSE}
 predictions_2 = predict(model2, newdata = df)
 
 print(predictions_2)
@@ -542,8 +499,277 @@ print(predictions_2)
 
 #### Model 3 Predictions:
 
-```{r}
+```{r, echo = FALSE}
 predictions_3 = predict(model3, newdata = df)
 
 print(predictions_3)
 ```
+
+
+
+# Appendix
+
+## R Code
+
+```{r, results = "hide", fig.keep = "none"}
+library(knitr)
+library(readr)
+library(ggplot2)
+library(tidyverse)
+library(missMethods)
+library(dplyr)
+library(naniar)
+library(MASS)
+library(ggfortify)
+library(glmnet)
+library(ggpubr)
+library(corrplot)
+
+set.seed(621)
+
+###Import and Summarize the data
+money_train <- read.csv(url("https://raw.githubusercontent.com/Mattr5541/DATA-621-Homework-1/main/moneyball-training-data.csv"))
+
+
+summary(money_train)
+
+###Descriptive data analysis
+dim(money_train)
+colSums(is.na(money_train))
+#box plot not including the index column
+
+money_train %>%
+  gather(variable, value, TARGET_WINS:TEAM_FIELDING_DP) %>%
+  ggplot(., aes(x= variable, y=value)) + 
+  geom_boxplot() +
+  facet_wrap(~variable, scales ="free", ncol = 4) +
+  labs(x = element_blank(), y = element_blank())
+
+money_train %>%
+  keep(is.numeric) %>%                     
+  gather(key, value, TARGET_WINS:TEAM_FIELDING_DP) %>%                             
+  ggplot(aes(value)) +                     
+    facet_wrap(~ key, scales = "free") +  
+    geom_histogram(bins = 35)    
+
+money_train <- money_train[, -1]
+money_train %>% 
+  gather(variable, value, -TARGET_WINS) %>%
+  ggplot(., aes(value, TARGET_WINS)) + 
+  geom_point(fill = "blue", color="blue") + 
+  geom_smooth(method = "lm", se = FALSE, color = "black") + 
+  facet_wrap(~variable, scales ="free", ncol = 4) +
+  labs(x = element_blank(), y = "Wins") 
+
+# sorted correlation of explanatory variables correlated to TARGET_WINS, response variables. 
+correlation_matrix <- cor(drop_na(money_train))
+correlation_coefficients <- correlation_matrix[, 1]
+sorted_correlation <- sort(correlation_coefficients, decreasing = TRUE)
+print(sorted_correlation)
+
+correlation_matrix <- cor(drop_na(money_train))
+corrplot(correlation_matrix, method = "color", 
+         addgrid.col = NA, tl.col = "black", tl.srt = 45,
+         addCoef.col = "black",
+         tl.cex = 0.5,
+         number.cex = 0.5) 
+
+###Imputation and testing the imputation
+## Vars with missing observations include: TEAM_BATTING_SO; TEAM_BASERUN_SB; TEAM_BASERUN_CS; TEAM_BATTING_HBP; TEAM_PITCHING_SO; TEAM_FIELDING_DP
+###Team_BATTING_HBP contains over 2000 missing variables; everything else is within the range of 102-772
+
+####First, I will make indices to flag missing values 
+TEAM_BATTING_SO_index <- is.na(money_train$TEAM_BATTING_SO)  
+TEAM_BASERUN_SB_index <- is.na(money_train$TEAM_BASERUN_SB) 
+TEAM_BASERUN_CS_index <- is.na(money_train$TEAM_BASERUN_CS) 
+TEAM_BATTING_HBP_index <- is.na(money_train$TEAM_BATTING_HBP) 
+TEAM_PITCHING_SO_index <- is.na(money_train$TEAM_PITCHING_SO) 
+TEAM_FIELDING_DP_index <- is.na(money_train$TEAM_FIELDING_DP) 
+
+
+### And now to impute
+
+money_train_mod <- money_train %>% missMethods::impute_median()
+summary(money_train_mod)
+
+money_train <- money_train %>% mutate(INDEX = seq_len(nrow(money_train)))
+money_train_mod <- money_train_mod %>% mutate(INDEX = seq_len(nrow(money_train_mod)))
+
+### Now I will compare some variables to see if the median imputation worked
+money_train_comp <- money_train$TEAM_BATTING_SO
+
+data.frame(money_train_comp)
+
+money_train_comp <- money_train %>% dplyr::select(INDEX, TEAM_BATTING_SO, TEAM_BASERUN_SB, TEAM_BATTING_HBP, TEAM_BASERUN_CS, TEAM_PITCHING_SO, TEAM_FIELDING_DP)
+money_train_mod_comp <- money_train_mod %>% dplyr::select(INDEX, TEAM_BATTING_SO, TEAM_BASERUN_SB, TEAM_BATTING_HBP, TEAM_BASERUN_CS, TEAM_PITCHING_SO,  TEAM_FIELDING_DP)
+
+money_train_index <- cbind(TEAM_BATTING_SO_index, TEAM_BASERUN_SB_index, TEAM_BASERUN_CS_index, TEAM_BATTING_HBP_index, TEAM_PITCHING_SO_index, TEAM_FIELDING_DP_index)
+money_train_index <- as.data.frame(money_train_index)
+  
+money_train_comp <- merge(money_train_comp, money_train_mod_comp, by = "INDEX")
+money_train_comp <- money_train_comp %>% cbind(money_train_index)
+
+
+ggplot(money_train_comp, aes(TEAM_BATTING_SO.y, color = TEAM_BATTING_SO_index)) + geom_histogram()
+ggplot(money_train_comp, aes(TEAM_BASERUN_SB.y, color = TEAM_BASERUN_SB_index)) + geom_histogram()
+ggplot(money_train_comp, aes(TEAM_BASERUN_CS.y, color = TEAM_BASERUN_CS_index)) + geom_histogram()
+ggplot(money_train_comp, aes(TEAM_BATTING_HBP.y, color = TEAM_BATTING_HBP_index)) + geom_histogram() ##As we can see, this mean imputation method may not have 
+##been entirely appropriate for this variable, since such a large proportion was missing (~88%). Everything else should be fine.
+ggplot(money_train_comp, aes(TEAM_PITCHING_SO.y, color = TEAM_PITCHING_SO_index)) + geom_histogram()
+ggplot(money_train_comp, aes(TEAM_FIELDING_DP.y, color = TEAM_FIELDING_DP_index)) + geom_histogram()
+
+###QQ plots and histograms of imputed data
+##TARGET_WINS
+q1 <- ggplot(money_train_mod, aes(sample = TARGET_WINS)) + stat_qq() + stat_qq_line() + labs(title = "TARGET_WINS")
+
+##TEAM_BATTING_H
+q2 <- ggplot(money_train_mod, aes(sample = TEAM_BATTING_H)) + stat_qq() + stat_qq_line() + labs(title = "TEAM_BATTING_H")
+
+##TEAM_BATTING_2B 
+q3 <- ggplot(money_train_mod, aes(sample = TEAM_BATTING_2B)) + stat_qq() + stat_qq_line() + labs(title = "TEAM_BATTING_2B")
+
+##TEAM_BATTING_3B 
+q4 <- ggplot(money_train_mod, aes(sample = TEAM_BATTING_3B)) + stat_qq() + stat_qq_line() + labs(title = "TEAM_BATTING_3B")
+
+##TEAM_BATTING_HR 
+q5 <- ggplot(money_train_mod, aes(sample = TEAM_BATTING_HR)) + stat_qq() + stat_qq_line() + labs(title = "TEAM_BATTING_HR")
+
+##TEAM_BATTING_BB
+q6 <- ggplot(money_train_mod, aes(sample = TEAM_BATTING_BB)) + stat_qq() + stat_qq_line() + labs(title = "TEAM_BATTING_BB")
+
+##TEAM_BATTING_SO
+q7 <- ggplot(money_train_mod, aes(sample = TEAM_BATTING_SO)) + stat_qq() + stat_qq_line() + labs(title = "TEAM_BATTING_SO")
+
+ggarrange(q1, q2, q3, q4, q5, q6, q7)
+
+
+### Log transformations and histograms of log transformations
+
+# Apply log transformations; and safely by add 1 to avoid log(0) in variables with 0's
+money_train_mod <- money_train_mod %>% mutate(log_TEAM_FIELDING_E = log(TEAM_FIELDING_E))
+money_train_mod <- money_train_mod %>% mutate(log_TEAM_PITCHING_H = log(TEAM_PITCHING_H))
+money_train_mod <- money_train_mod %>% mutate(log_TEAM_PITCHING_BB = log(TEAM_PITCHING_BB))
+money_train_mod <- money_train_mod %>% mutate(log_TEAM_PITCHING_SO = log(TEAM_PITCHING_SO))
+money_train_mod <- money_train_mod %>% mutate(log_TEAM_BASERUN_SB = log(TEAM_BASERUN_SB))
+money_train_mod <- money_train_mod %>% mutate(log_TEAM_BATTING_3B = log(TEAM_BATTING_3B))
+money_train_mod <- money_train_mod %>% mutate(log_TEAM_BATTING_HR = log(TEAM_BATTING_HR))
+money_train_mod <- money_train_mod %>% mutate(log_TEAM_BATTING_SO = log(TEAM_BATTING_SO))
+money_train_mod <- money_train_mod %>% mutate(log_TEAM_BASERUN_CS = log(TEAM_BASERUN_CS))
+money_train_mod <- money_train_mod %>% mutate(log_TEAM_FIELDING_DP = log(TEAM_FIELDING_DP))
+money_train_mod$log_TEAM_BASERUN_CS <- log(money_train_mod$TEAM_BASERUN_CS + 1)
+money_train_mod$log_TEAM_BATTING_HR <- log(money_train_mod$TEAM_BATTING_HR + 1)
+money_train_mod$log_TEAM_BATTING_SO <- log(money_train_mod$TEAM_BATTING_SO + 1)
+money_train_mod$log_TEAM_BATTING_3B <- log(money_train_mod$TEAM_BATTING_3B + 1)
+money_train_mod$log_TEAM_BASERUN_SB <- log(money_train_mod$TEAM_BASERUN_SB + 1)
+money_train_mod$log_TEAM_PITCHING_SO <- log(money_train_mod$TEAM_PITCHING_SO + 1)
+money_train_mod$log_TEAM_FIELDING_E <- log(money_train_mod$TEAM_FIELDING_E + 1)
+money_train_mod$log_TEAM_PITCHING_BB <- log(money_train_mod$TEAM_PITCHING_BB + 1)
+
+
+par(mfrow=c(3,3))
+hist(money_train_mod$log_TEAM_FIELDING_E, main = "log_TEAM_FIELDING_E")
+hist(money_train_mod$log_TEAM_PITCHING_H, main = "log_TEAM_PITCHING_H")
+hist(money_train_mod$log_TEAM_PITCHING_BB, main = "log_TEAM_PITCHING_BB")
+hist(money_train_mod$log_TEAM_PITCHING_SO, main = "log_TEAM_PITCHING_SO")
+hist(money_train_mod$TEAM_BASERUN_CS, main = "TEAM_BASERUN_CS")
+hist(money_train_mod$TEAM_BATTING_SO, main = "TEAM_BATTING_SO")
+hist(money_train_mod$TEAM_BATTING_BB, main = "TEAM_BATTING_BB")
+hist(money_train_mod$TEAM_BATTING_3B, main = "TEAM_BATTING_3B")
+
+
+###Multiple Regression models
+
+model1 = lm(TARGET_WINS ~ TEAM_BATTING_H + TEAM_BATTING_BB + log_TEAM_PITCHING_SO+ log_TEAM_FIELDING_E , data= money_train_mod)
+
+summary(model1)
+
+autoplot(model1)
+
+model2 = lm(TARGET_WINS ~ TEAM_BATTING_H * TEAM_BATTING_BB + log_TEAM_PITCHING_SO* log_TEAM_FIELDING_E , data= money_train_mod)
+
+summary(model2)
+
+autoplot(model2)
+
+model3 = lm(TARGET_WINS ~ TEAM_BATTING_H + TEAM_BATTING_BB + TEAM_BASERUN_SB + log_TEAM_FIELDING_DP + log_TEAM_PITCHING_SO + log_TEAM_FIELDING_E + TEAM_BATTING_H:log_TEAM_BASERUN_SB + log_TEAM_PITCHING_SO:log_TEAM_FIELDING_DP, data = money_train_mod)
+
+
+summary(model3)
+
+autoplot(model3)
+
+###Model validation via AIC and BIC criteria
+AIC_values <- AIC(model1, model2, model3)
+
+print(AIC_values)
+
+BIC_values <- BIC(model1, model2, model3)
+
+print(BIC_values)
+
+###Comparing R^2 values
+summary(model1)$r.squared
+summary(model2)$r.squared
+summary(model3)$r.squared
+
+###Predictive modeling and checking the RMSE
+predictions_train_1 = predict(model1, newdata = money_train_mod)
+predictions_train_2 = predict(model2, newdata = money_train_mod)
+predictions_train_3 = predict(model3, newdata = money_train_mod)
+
+rmse1 = sqrt(mean(na.omit(predictions_train_1 - money_train_mod$TARGET_WINS)^2))
+rmse2 = sqrt(mean(na.omit(predictions_train_2 - money_train_mod$TARGET_WINS)^2))
+rmse3 = sqrt(mean(na.omit(predictions_train_3 - money_train_mod$TARGET_WINS)^2))
+
+print(rmse1)
+print(rmse2)
+print(rmse3)
+
+###Importing the evaluation dataset and transforming the data
+evaluation = read_csv('moneyball-evaluation-data.csv')
+
+money_train_join = money_train %>%
+  mutate(train_or_test = 'train')
+
+evaluation_join = evaluation %>%
+  mutate(train_or_test = 'test')
+
+df = rbind(subset(money_train_join, select =-TARGET_WINS), evaluation_join)
+
+df <- df %>% 
+  missMethods::impute_median() %>%
+  filter(train_or_test == 'test')
+
+df <- df %>% mutate(log_TEAM_FIELDING_E = log(TEAM_FIELDING_E))
+df <- df %>% mutate(log_TEAM_PITCHING_H = log(TEAM_PITCHING_H))
+df <- df %>% mutate(log_TEAM_PITCHING_BB = log(TEAM_PITCHING_BB))
+df <- df %>% mutate(log_TEAM_PITCHING_SO = log(TEAM_PITCHING_SO))
+df <- df %>% mutate(log_TEAM_BASERUN_SB = log(TEAM_BASERUN_SB))
+df <- df %>% mutate(log_TEAM_BATTING_3B = log(TEAM_BATTING_3B))
+df <- df %>% mutate(log_TEAM_BATTING_HR = log(TEAM_BATTING_HR))
+df <- df %>% mutate(log_TEAM_BATTING_SO = log(TEAM_BATTING_SO))
+df <- df %>% mutate(log_TEAM_BASERUN_CS = log(TEAM_BASERUN_CS))
+df <- df %>% mutate(log_TEAM_FIELDING_DP = log(TEAM_FIELDING_DP))
+df$log_TEAM_BASERUN_CS <- log(df$TEAM_BASERUN_CS + 1)
+df$log_TEAM_BATTING_HR <- log(df$TEAM_BATTING_HR + 1)
+df$log_TEAM_BATTING_SO <- log(df$TEAM_BATTING_SO + 1)
+df$log_TEAM_BATTING_3B <- log(df$TEAM_BATTING_3B + 1)
+df$log_TEAM_BASERUN_SB <- log(df$TEAM_BASERUN_SB + 1)
+df$log_TEAM_PITCHING_SO <- log(df$TEAM_PITCHING_SO + 1)
+df$log_TEAM_FIELDING_E <- log(df$TEAM_FIELDING_E + 1)
+df$log_TEAM_PITCHING_BB <- log(df$TEAM_PITCHING_BB + 1)
+
+###Making predictions for the evaluation data
+predictions_1 = predict(model1, newdata = df)
+
+print(predictions_1)
+
+predictions_2 = predict(model2, newdata = df)
+
+print(predictions_2)
+
+predictions_3 = predict(model3, newdata = df)
+
+print(predictions_3)
+```
+
